@@ -1,3 +1,9 @@
+2009-04-04  Paul Thomas  <pault@gcc.gnu.org>
+
+	Backport from mainline:
+	PR fortran/39519
+	* gfortran.dg/alloc_comp_assign_9.f90: New test.
+
 2009-04-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
