@@ -1,3 +1,10 @@
+2009-04-04  Paul Thomas  <pault@gcc.gnu.org>
+
+	Backport from mainline:
+	PR fortran/39519
+	* parse.c (parse_derived): Do not break on finding pointer,
+	allocatable or private components.
+
 2009-04-03  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/39594
